# zeropykvm

./: .containerignore  .gitignore  Containerfile  README.md  podman-compose.yml  pyproject.toml  test_c.py
.github/workflows/: ci.yml  docker-publish.yml  pypi-deploy.yml
mykvm/: args.py  capture.py  edid.py  encode.py  http_handler.py  https_server.py  main.py  server.py  usb.py  utils.py  v4l2.py  video.py  ws_handler.py
mykvm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mykvm/edid_data/: 1080p25edid
tests/: test_args.py  test_dma.py  test_edid.py  test_epaper.py  test_gencert.py  test_http_handler.py  test_https_server.py  test_install_service.py  test_passthrough.py  test_podman.py  test_server.py  test_usb.py  test_utils.py  test_v4l2.py  test_ws_handler.py
web/: dist.tar  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  index.css  main.tsx
web/src/hooks/: demux.ts  index.ts  useHidInput.ts  useKvmConnection.ts  useLocalStorage.ts  useLogger.ts  useVideoDecoder.ts
zeropykvm/: __init__.py  args.py  dma.py  epaper.py  gencert.py  http_handler.py  https_server.py  install_service.py  main.py  passthrough.py  server.py  usb.py  video.py  ws_handler.py
zeropykvm/edid_data/: 1080p25edid  1080p30edid  720p60edid
